# AVX-LLM-kernel-accel

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_all_benchmarks.sh  run_all_tests.sh  setup.py
benchmarks/: PERFORMANCE_ANALYSIS.md  benchmark_gemm.py  benchmark_layernorm.py  benchmark_softmax.py
data/: generate_synthetic.py
kernels/common/: avx_utils.h  threading.h
kernels/gemm/: gemm_avx.cpp  gemm_avx.h
kernels/layernorm/: layernorm_avx.cpp  layernorm_avx.h
kernels/softmax/: softmax_avx.cpp  softmax_avx.h
python/: __init__.py  avx_kernels.cpp  model.py
tests/: test_gemm.py  test_layernorm.py  test_softmax.py
